# DS-Projects

./: .gitignore  ATLA Analysis.ipynb  ATLA Test.ipynb  Client Analytics Exercise.ipynb  Flu Vaccine Predictor (Random Forest).ipynb  NYC Metro Analysis.ipynb  atla_func.py
.ipynb_checkpoints/: ATLA Analysis-checkpoint.ipynb  NYC Metro Analysis-checkpoint.ipynb
Energy Savings_ Python Certification/: Singapore Recycling Energy Savings.ipynb
Energy Savings_ Python Certification/.ipynb_checkpoints/: Singapore Recycling Energy Savings-checkpoint.ipynb
Energy Savings_ Python Certification/datasets/: 2018_2019_waste.csv  energy_saved.csv  wastestats.csv
gsheet_helper/: .gitignore  README.md  pyproject.toml
gsheet_helper/src/gsheet_helper/: GSheetHelper.py  __init__.py  cli.py
gsheet_helper/src/gsheet_helper/utils/: __init__.py  credentials.py  gsheets.py
